Fixed maven-test.yml Removed Java 11 only function